<resources>
    <string name="app_name">GigFindr</string>
    <string name="filter_by">Filter by</string>
    <string name="is_opened_saturday">Is opened saturday</string>
    <string name="saturday_opening">Saturday opening</string>
    <string name="close">close</string>
    <string name="title_activity_maps">BeerAndMusic</string>
    <string name="facebook_app_id">171036663755808</string>
    <string name="fb_login_protocol_scheme">fb171036663755808</string>
    <string name="google_geo_api_key">AIzaSyCpkkn3iUI336l3KzFbLUbRSw3oTy7B6CQ</string>
    <string name="google_geo_api_key_new">AIzaSyCff6g_GDPhdjZKKobHvOurVWAITxUKtZA</string>
    <string name="account_balance">Account Balance</string>
    <string name="balance_currency">$</string>
    <string name="balance_amount">524.99</string>
    <string name="accountactivity_connect">Connect</string>
    <string name="accountactivity_change2">Change</string>
    <string name="accountactivity_removeAccount">Disconnect Instagram Account?</string>
    <string name="accountactivity_logout">Are you sure you want to logout?</string>
    <string name="accountactivity_remove">DISCONNECT</string>
    <string name="hello_world">Hello world!</string>
    <string name="free_caps">FREE</string>
    <string name="free">Free</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="sort_by_genre">Sort by genre</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet?</string>
    <string name="newUser2">Sign Up here!</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirm_caps">CONFIRM</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking Sign Up, you agree with all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="ForgetPassword">FORGET PASSWORD</string>
    <string name="ResetPassword">RESET PASSWORD</string>
    <string name="already_user">Already have an account?</string>
    <string name="already_user2">Login here</string>
    <string name="registered_emailid">Please enter your Registered Email below</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="edit">EDIT</string>
    <string name="about">ABOUT</string>
    <string name="cancel">Cancel</string>
    <string name="or">or</string>
    <string name="name">NAME</string>
    <string name="namenocaps">Name</string>
    <string name="save">SAVE</string>
    <string name="logout">Logout</string>
    <string name="datenocaps">Date</string>
    <string name="locationnocaps">Location</string>
    <string name="aboutnocaps"><u>About</u></string>
    <string name="aboutnocapsnounderline">About</string>
    <string name="showdetailsnocap">Show Details</string>
    <string name="getdirections">GET DIRECTIONS</string>
    <string name="view">View</string>
    <string name="detailedshowactivity">View Instagram</string>
    <string name="detailedshowband"><u>BAND</u></string>
    <string name="detailedshowshow"><u>SHOW</u></string>
    <string name="detailedshowtester">"Distinguishable beats that resembles Chris Dave and also sick licks from blues to fusion. We are a 4 piece cluelessly running up and down life with music as our pendant and chain."</string>
    <string name="accountactivity_tv2saving">Telling the whole world the band is in town</string>
    <string name="accountactivity_tv1saving">SAVING</string>
    <string name="accountactivity_change">CHANGE</string>
    <string name="accountactivity_abouthint"><i>People need to know more about your band, tell them more!</i></string>
    <string name="accountactivity_abouthint2">BRIEF INTRODUCTION</string>
    <string name="accountactivity_namehint">What\'s your band\'s name? The people need to know!</string>
    <string name="accountactivity_namehint2">Name</string>
    <string name="accountactivity_emptyname"><i>What\'s your band\'s name?</i></string>
    <string name="accountactivity_selectapicture">Select a Picture</string>
    <string name="decideactivity_tvpostshow">Let your old fans know where and gain new fans!</string>
    <string name="decideactivity_tvpostshow2">SHARE YOUR SHOW</string>
    <string name="decideactivity_tvfindshow">FIND A SHOW</string>
    <string name="decideactivity_tvfindshow2">Look for live music and a good time!</string>
    <string name="deleteaccoutnactivity_deleteaccount">Delete Account</string>
    <string name="editinfoactivity_pickimage">Pick image</string>
    <string name="editinfoactivity_aboutband">About band</string>
    <string name="mapactivity_findnearshow">FIND SHOWS NEAR ME</string>
    <string name="postshowactivity_deleteshow">DELETE</string>
    <string name="postshowactivity_addshow">ADD</string>
    <string name="postshowactivity_postshowtitle">Add Show</string>
    <string name="postshowactivity_endtime">End Time</string>
    <string name="postshowactivity_starttime">Start Time</string>
    <string name="postshowactivity_addashow">Add a show</string>
    <string name="postshowactivity_location">Location</string>
    <string name="postshowactivity_fee">Fee</string>
    <string name="postshowactivity_genre">Genre</string>
    <string name="postshowactivity_date">Date</string>
    <string name="privacypolicyactivity_privacypolicy">Privacy policy</string>
    <string name="signupfragment_loadingtext">Hang tight with us, our roadies are getting the stage ready!</string>
    <string name="signupfragment_loading">LOADING</string>
    <string name="termsandconditionactivity_termsnandcondition">Terms and Conditions</string>
    <string name="thirdpartylibs_3rdpartylibs">3rd party libraries</string>
    <string name="markerinfowindow_select"><i>Select for more details</i></string>
    <string name="viewallshowsactivity_upcomingshows">Upcoming gigs</string>
    <string name="viewallshowsactivity_blues">Blues</string>
    <string name="viewallshowsactivity_rock">Rock</string>
    <string name="viewallshowsactivity_hiphop">Hip Hop</string>
    <string name="viewallshowsactivity_metal">Metal</string>
    <string name="viewallshowsactivity_indie">Indie</string>
    <string name="viewallshowsactivity_punk">Punk</string>
    <string name="viewallshowsactivity_reggae">Reggae</string>
    <string name="viewallshowsactivity_soul">Soul</string>
    <string name="viewallshowsactivity_electronic">Electronic</string>
    <string name="viewallshowsactivity_pop">Pop</string>
    <string name="viewallshowsactivity_jazz">Jazz</string>
    <string name="viewallshowsactivity_noupcomingshow">Sorry, no upcoming gig found</string>
    <string name="accountactivity_enterigname">INSTAGRAM NAME</string>
    <string name="accountactivity_enterigname2">Enter your Instagram handle</string>
    <string name="accountactivity_introductionHint">Talk about yourselves, how your band came together, band name, adventures you took as a band, basically anything that makes your band!</string>
    <string name="postshowactivity_entryfee">ENTRY FEE</string>
    <string name="postshowactivity_entryfee2">Enter \'Free\' if it is free</string>
    <string name="postshowactivity_OK">OK</string>
    <string name="postshowactivity_CANCEL">CANCEL</string>
    <string name="locationcheckeractivity_buttontext">TURN ON LOCATION</string>
    <string name="locationcheckeractivity_text">Enable location to continue using app!</string>
    <string name="viewmyshows_myshows">My Shows</string>
    <string name="viewmyshows_myshows_noshow">You Have No Upcoming Gig</string>
    <string name="about1">Two friends that worked under the void deck to bring you <i>GigFindr</i>, the service that was created by locals and for locals. Nothing beats live music, it is raw expression, pure hardwork and it shoudn\'t be kept in the corners of our lives. We believe in working with local artiste to broaden their reach and promote asipring dreams growth.
    </string>
    <string name="about2">Nothing beats live music, pure raw expression caught only in the middle of the sets. Behind them lies a story to be told, hard work to be felt and it shouldn’t be kept in the corners of our lives. Here in <i>GigFindr</i>, we want to help you gain more exposure while providing a one-stop service to help keep your schedule tidy and your fans itching for more. \n\nWe are open to suggestions so  do let us know what we can improve on! We won’t let you go unheard.
    </string>
    <string name="smilingbirdabout"><b>Smiling Bird Vision</b>
    </string>
    <string name="smilingbirdcontact">
        Contact us at smiling.bird.vision@gmail.com
    </string>
    <string name="yatAbout"><b>Nur Hidayat</b>, no stranger to the tomes and hieroglyphics of the design world.
        Intricate designs to illustrations, he has it all.
    </string>
    <string name="tpsthanks">Without them, we won\'t be here. A huge THANK YOU to the following mentioned libraries, do check them out!</string>
    <string name="yatContact">
        Contact: yatson4@gmail.com
    </string>
    <string name="pp">&#8226; <u>Privacy Policy</u></string>
    <string name="tc">&#8226; <u>T&amp;C</u></string>
    <string name="tps">&#8226; <u>3rd Party Libraries</u></string>
    <string name="lib1">&#8226; <u>IWAHalfModalPresenter</u></string>
    <string name="lib2">&#8226; <u>SlidingRootNav</u></string>
    <string name="lib3">&#8226; <u>Android-SpinKit</u></string>
    <string name="lib4">&#8226; <u>ParallaxRecyclerView</u></string>
    <string name="lib5">&#8226; <u>IconSwitch</u></string>
    <string name="lib6">&#8226; <u>PingPlacePicker</u></string>
</resources>