<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:src="@drawable/gigfindriconyellow"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_whiteborder">

            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/iconemailwhite52"
                android:textCursorDrawable="@null"
                style="@style/edittextcolorcontrol"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white_greyish"
                android:textColorHint="@color/white_greyish"
                android:fontFamily="@font/roboto_condensed_bold_test_download"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_whiteborder">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/iconpasswordwhite52"
                android:textCursorDrawable="@null"
                style="@style/edittextcolorcontrol"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white_greyish"
                android:textColorHint="@color/white_greyish"
                android:fontFamily="@font/roboto_condensed_bold_test_download"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_pwd"
                android:buttonTint="@color/white_greyish"
                android:textColor="@color/white_greyish"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/yellow"
                android:fontFamily="@font/roboto_condensed_bold_test"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/login"
            android:fontFamily="@font/roboto_condensed_bold_test"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/newUser"
            android:textColor="@color/white_greyish"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/newUser2"
            android:textColor="@color/yellow"
            android:textSize="15sp" />

    </LinearLayout>




</RelativeLayout>