<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginTop="65dp"
            android:text="@string/ForgetPassword"
            android:textColor="@color/yellow"
            android:fontFamily="@font/fjalla_one_test"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/registered_emailid"
            android:textColor="@color/white_greyish"
            android:fontFamily="@font/roboto_condensed_bold_test_download"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_whiteborder">

            <EditText
                android:id="@+id/registered_emailid"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/iconemailwhite52"
                android:textCursorDrawable="@null"
                style="@style/edittextcolorcontrol"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white_greyish"
                android:textColorHint="@color/white_greyish"
                android:fontFamily="@font/roboto_condensed_bold_test_download"
                android:textSize="16sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/forgot_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/ResetPassword"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_condensed_bold_test_download"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>