<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:background="@color/bgyellow1"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/accountactivity_removeAccount"
            android:fontFamily="@font/roboto_slab_bold_download"
            android:textSize="26sp"
            android:textColor="@color/black"/>



        <RelativeLayout
            android:id="@+id/relativeLayoutCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle_blackborder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:padding="15dp"
                android:textSize="18sp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_condensed_bold_test_download"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/relativeLayoutCancel"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_blackborder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold_test_download"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                android:text="@string/accountactivity_remove"/>

        </RelativeLayout>




    </RelativeLayout>


</RelativeLayout>